forth/test/fail/test_const_fold_redundant_mul_zero.af
use' ../../lang.af
fun: .test_const_fold_redundant_mul_zero { val -- out } val 0 * end
